minor update to header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <meta name="google-site-verification" content="PmOT4QwF1x9TSSKYFg6if9CR_TojuEk8pFDffRgdfns">
     <meta name="twitter:card" content="summary_large_image"> -->
     <meta property="og:title" content="1st AIMS Workshop and School on The Theory of Quantum Learning Algorithms">
-    <meta property="og:description" content="A workshop focused on questions of learning and testing in the quantum world">
+    <meta property="og:description" content="A workshop focused on the theory of quantum learning algorithms.">
 
     <title>1st AIMS Workshop and School on The Theory of Quantum Learning Algorithms</title>
 </head>
