Updated speakers, committee and sponsors

--- a/index.html
+++ b/index.html
@@ -66,59 +66,79 @@
 
     <h2>The Theory of Quantum Learning Algorithms</h2>
 
-    
+ 
 <p>The last decade has witnessed incredible progress in the development of classical algorithms for machine learning, 
     which have revolutionised many aspects of society. Similarly, the last decade has also seen significant progress in 
     both the theory and realisation of quantum computers. Given these developments, a natural and important question is: 
-     To what extent can quantum learning algorithms offer meaningful advantages for classical machine learning problems? </p>
+     To what extent can quantum learning algorithms offer meaningful advantages for learning problems? </p>
 
 <p>Simultaneously, it has also been increasingly appreciated that there exist a wide variety of <i>genuinely quantum</i>
-     learning problems, such as learning unknown quantum states or processes, and that understanding the extent to which one can develop quantum learning algorithms
-      for these problems is both conceptually interesting and practically important.</p>
+     learning problems, such as learning unknown quantum states or processes. Understanding the extent to which one can develop quantum learning algorithms
+      for these problems is both fundamentally interesting and practically important, both for better understanding the world around us, and for facilitating the development and verification of quantum technologies.</p>
 
 <p>Unlike the classical setting, in which the vast majority of machine learning research is done through incredibly large-scale experiments, 
     the limitations of current generation quantum computers necessitates the use of theory to develop our understanding of answers to the above questions.
     As such, this workshop and school will be focused on the <i>theory and mathematical foundations</i> of quantum learning algorithms, 
 for both quantum and classical learning problems. Example topics of interest include:</p>
 
-<p><ol>
+<p><ul>
 <li>Quantum algorithms for learning quantum states and processes in a wide variety of learning models.</li>
-<li>Provable separations between quantum and classical learning algorithms.</li>
+<li>Mathematical tools for the development and analysis of quantum learning algorithms.</li>
 <li>Quantum algorithms for both classical and quantum property testing.</li>
 <li>Generalization bounds for quantum learning algorithms.</li>
-<li>Theory of parameterised quantum circuits.</li>
 <li>Theory of distributed quantum algorithms for learning and property testing.</li>
 <li>Cryptographic security and robustness of quantum learning algorithms.</li>
-<li>Classical simulation methods for quantum learning algorithms.</li>
-<li>Dequantization of quantum learning algorithms.</li></ol></p>
+<li>Dequantization of quantum learning algorithms.</li></ul></p>
 
-
-    <h2>Application and Registration</h2>
-
-    <p>Workshop talks will be by invitation only. Applications for the school will open in June. Full funding will be available for selected school participants based in Africa.</p>
 
     <h2 id="WorkshopProgram">Workshop Program</h2>
 
-    <p>To be announced. </p>
+    <p>The following speakers have been confirmed: </p>
+
+    <ul>
+        <li> <a target="_blank" href="https://sites.google.com/view/matthiasccaro">Matthias Caro</a> (University of Warwick)</li>
+        </ul></p>
+
+    <p>More to be announced soon.</p>
 
     <h2 id="SchoolProgram">School Program</h2>
 
-    <p>To be announced.</p>
+    <p>The following lecturers have been confirmed: </p>
+
+    <ul>
+        <li> <a target="_blank" href="https://antonioannamele.comAntonio"> Anna Mele </a>(FU Berlin) - Haar Integration Tools in Quantum Information</li>
+        </ul></p>
+
+    <p>More to be announced soon.</p>
 
     <h2 id="Venue">Venue</h2>
 
     <p>The event will be held at the <a target="_blank" href="https://aims.ac.za">African Institute for Mathematical Sciences (AIMS)</a>, which is located in Muizenberg, Cape Town, steps away from the famous "Surfers Corner" beach. The event will be held from Monday 27th of October 2025, until Thursday 30th of October 2025.</p>
     
-    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4021.8630464386815!2d18.46789587653067!3d-34.10744543146045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc4053712793b9%3A0x1e00b95a12349954!2sAIMSSEC!5e1!3m2!1sen!2sus!4v1745348194056!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d840.3973183946277!2d18.470143568910974!3d-34.107445431350705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc40541fb7b081%3A0x255bd0d6f3bf3663!2sAIMS!5e1!3m2!1sen!2sza!4v1749458866167!5m2!1sen!2sza" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-    <h2 id="Organization">Organization</h2>
+    <h2 id="Organization">Organizing Committee</h2>
 
-    <p><a target="_blank" href="https://r-sweke.github.io">Ryan Sweke</a> (African Institute for Mathematical Sciences)
-    </p>
+    <p>Lennart Bittel (FU Berlin)<br>
+    Carlos Bravo-Prieto (FU Berlin)<br>
+    Chenfeng Cao (FU Berlin)<br>
+    Jonathan Conrad (EPFL)<br>
+    Jens Eisert (FU Berlin)<br>
+    Elies Gil Fuster (FU Berlin)<br>
+    Sofiene Jerbi (FU Berlin)<br>
+    Lorenzo Leone (FU Berlin)<br>
+    Antonio Anna Mele (FU Berlin)<br>
+    Francesco Anna Mele (Scuola Normale Superiore di Pisa)<br>
+    Ryan Sweke (African Institute for Mathematical Sciences - Main Organizer)<br>
+    Yanting Teng (EPFL)</p>
+
+    <h2>Application and Registration</h2>
+
+    <p>Workshop talks will be by invitation only. Applications for the school will open in July. Full funding will be available for selected school participants based in Africa.</p>
 
     <h2 id="Support">Support</h2>
 
-    <p><img src="assets/AIMS_logo.png" style="width: 30%"></p>
+    <p> <img src="assets/sponsorbanner.png" style="width: 100%"><br> </p>
 
     <footer>
         &copy; Workshop Organizers
@@ -127,3 +147,5 @@ for both quantum and classical learning problems. Example topics of interest inc
 
 </body>
 </html>
+
+
