trying without the navigation

--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
         </div>
     </div>
 
-    <table class="navigation">
+    <!-- <table class="navigation">
         <tr>
-            <!--<td class="navigation">
-                <a title="Conference Home Page" href="#top">Home</a>
-            </td>-->
             <td class="navigation">
                 <a title="Workshop Program" href="#WorkshopProgram">Workshop Program</a> 
             </td>
@@ -53,7 +50,7 @@
                 <a title="Support" href="#Support">Support</a>
             </td>
         </tr>
-    </table>
+    </table> -->
 
     <h2>Overview</h2>
     <p>From the 27th to the 30th of October 2025, the <a target="_blank" href="https://aims.ac.za">African Institute for Mathematical Sciences (AIMS)</a>, in Cape Town, South Africa, will host the <b>1st AIMS Workshop and School on The Theory of Quantum Learning Algorithms</b>.</p>
@@ -66,6 +63,7 @@
 
     <h2>The Theory of Quantum Learning Algorithms</h2>
 
+   
  
 <p>The last decade has witnessed incredible progress in the development of classical algorithms for machine learning, 
     which have revolutionised many aspects of society. Similarly, the last decade has also seen significant progress in 
