--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ for both quantum and classical learning problems. Example topics of interest inc
     <p>The following lecturers have been confirmed: </p>
 
     <ul>
-        <li> <a target="_blank" href="https://antonioannamele.comAntonio"> Anna Mele </a>(FU Berlin) - Haar Integration Tools in Quantum Information</li>
+        <li> <a target="_blank" href="https://antonioannamele.com"> Antonio Anna Mele </a>(FU Berlin) - Haar Integration Tools in Quantum Information</li>
         </ul></p>
 
     <p>More to be announced soon.</p>
