--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@ for both quantum and classical learning problems. Example topics of interest inc
 
     <p>The following speakers have been confirmed: </p>
 
-    <ul>
+    <ul><li> <a target="_blank" href="https://eanschuetz.github.io">Eric Anschuetz</a> (Caltech)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/matthiasccaro">Matthias Caro</a> (University of Warwick)</li>
+        <li> <a target="_blank" href="https://sites.google.com/view/quantumatliacs/">Vedran Dunjko</a> (Leiden University)</li>
+        <li> Laura Lewis (UC Berkeley)</li>
         </ul></p>
 
     <p>More to be announced soon.</p>
