added Dar and Lorenzo

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ for both quantum and classical learning problems. Example topics of interest inc
     <ul><li> <a target="_blank" href="https://eanschuetz.github.io">Eric Anschuetz</a> (Caltech)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/matthiasccaro">Matthias Caro</a> (University of Warwick)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/quantumatliacs/">Vedran Dunjko</a> (Leiden University)</li>
+        <li> Dar Gilboa (Google)</li>
         <li> Laura Lewis (UC Berkeley)</li>
         </ul></p>
 
@@ -107,6 +108,7 @@ for both quantum and classical learning problems. Example topics of interest inc
 
     <ul>
         <li> <a target="_blank" href="https://antonioannamele.com"> Antonio Anna Mele </a>(FU Berlin) - Haar Integration Tools in Quantum Information</li>
+        <li> Lorenzo Leone (FU Berlin) - The Clifford Group and its Applications</li>
         </ul></p>
 
     <p>More to be announced soon.</p>
