--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <base href=".">
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="assets/new_favicon.png">
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css">
     <meta charset="utf-8">
     <meta name="description" content="1st AIMS Workshop and School on The Theory of Quantum Learning Algorithms">
@@ -113,6 +113,10 @@ for both quantum and classical learning problems. Example topics of interest inc
 
     <p>More to be announced soon.</p>
 
+    <h2>Application and Registration</h2>
+
+    <p> Workshop talks are by invitation only. Applications for both workshop participation and the school will open in July. Full funding will be available for selected school participants based in Africa.</p>
+
     <h2 id="Venue">Venue</h2>
 
     <p>The event will be held at the <a target="_blank" href="https://aims.ac.za">African Institute for Mathematical Sciences (AIMS)</a>, which is located in Muizenberg, Cape Town, steps away from the famous "Surfers Corner" beach. The event will be held from Monday 27th of October 2025, until Thursday 30th of October 2025.</p>
@@ -133,10 +137,6 @@ for both quantum and classical learning problems. Example topics of interest inc
     Francesco Anna Mele (Scuola Normale Superiore di Pisa)<br>
     Ryan Sweke (African Institute for Mathematical Sciences - Main Organizer)<br>
     Yanting Teng (EPFL)</p>
-
-    <h2>Application and Registration</h2>
-
-    <p>Workshop talks will be by invitation only. Applications for the school will open in July. Full funding will be available for selected school participants based in Africa.</p>
 
     <h2 id="Support">Support</h2>
 
