--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ for both quantum and classical learning problems. Example topics of interest inc
         <li> <a target="_blank" href="https://sites.google.com/view/matthiasccaro">Matthias Caro</a> (University of Warwick)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/quantumatliacs/">Vedran Dunjko</a> (Leiden University)</li>
         <li> Dar Gilboa (Google)</li>
+        <li> <a target="_blank" href="https://vishnuiyer.org">Vishnu Iyer</a> (University of Texas at Austin)</li>
         <li> Laura Lewis (UC Berkeley)</li>
         </ul></p>
 
