Added Sitan as confirmed speaker

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ for both quantum and classical learning problems. Example topics of interest inc
 
     <ul><li> <a target="_blank" href="https://eanschuetz.github.io">Eric Anschuetz</a> (Caltech)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/matthiasccaro">Matthias Caro</a> (University of Warwick)</li>
+        <li> <a target="_blank" href="https://sitanchen.com">Sitan Chen</a> (Harvard)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/quantumatliacs/">Vedran Dunjko</a> (Leiden University)</li>
         <li> Dar Gilboa (Google)</li>
         <li> <a target="_blank" href="https://vishnuiyer.org">Vishnu Iyer</a> (University of Texas at Austin)</li>
