--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ for both quantum and classical learning problems. Example topics of interest inc
         <li> <a target="_blank" href="https://sitanchen.com">Sitan Chen</a> (Harvard)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/quantumatliacs/">Vedran Dunjko</a> (Leiden University)</li>
         <li> Dar Gilboa (Google)</li>
+        <li> Jonas Haferkamp (Saarland University)</li>
         <li> <a target="_blank" href="https://vishnuiyer.org">Vishnu Iyer</a> (University of Texas at Austin)</li>
         <li> Laura Lewis (UC Berkeley)</li>
         </ul></p>
