added Ryan O Donnell

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ for both quantum and classical learning problems. Example topics of interest inc
         <li> Jonas Haferkamp (Saarland University)</li>
         <li> <a target="_blank" href="https://vishnuiyer.org">Vishnu Iyer</a> (University of Texas at Austin)</li>
         <li> Laura Lewis (UC Berkeley)</li>
+        <li> <a target="_blank" href="http://www.cs.cmu.edu/~odonnell/">Ryan O'Donnell</a> (Carnegie Mellon University)</li>
         </ul></p>
 
     <p>More to be announced soon.</p>
