updated sponsor banner

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ for both quantum and classical learning problems. Example topics of interest inc
 
     <h2 id="Support">Support</h2>
 
-    <p> <img src="assets/sponsorbanner.png" style="width: 100%"><br> </p>
+    <p> <img src="assets/new-sponsor-banner.png" style="width: 100%"><br> </p>
 
     <footer>
         &copy; Workshop Organizers
