Added Ulysse, IBM and Nithecs

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ for both quantum and classical learning problems. Example topics of interest inc
 
     <ul><li> <a target="_blank" href="https://eanschuetz.github.io">Eric Anschuetz</a> (Caltech)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/matthiasccaro">Matthias Caro</a> (University of Warwick)</li>
+        <li> <a target="_blank" href="https://sites.google.com/view/ulyssechabaud">Ulysse Chabaud</a> (École Normale Supérieure de Paris)</li>
         <li> <a target="_blank" href="https://sitanchen.com">Sitan Chen</a> (Harvard)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/quantumatliacs/">Vedran Dunjko</a> (Leiden University)</li>
         <li> Dar Gilboa (Google)</li>
@@ -115,6 +116,8 @@ for both quantum and classical learning problems. Example topics of interest inc
         <li> <a target="_blank" href="https://antonioannamele.com"> Antonio Anna Mele </a>(FU Berlin) - Haar Integration Tools in Quantum Information</li>
         <li> Lorenzo Leone (FU Berlin) - The Clifford Group and its Applications</li>
         </ul></p>
+
+    <p>Additionally, IBM Research Africa will be delivering a Qiskit workshop to school participants.</p>
 
     <p>More to be announced soon.</p>
 
@@ -146,6 +149,12 @@ for both quantum and classical learning problems. Example topics of interest inc
     <h2 id="Support">Support</h2>
 
     <p> <img src="assets/new-sponsor-banner.png" style="width: 100%"><br> </p>
+
+    <p> Endorsed by </p>
+
+    <p> <img src="assets/nithecs.jpg" style="width: 40%"><br> </p>
+
+
 
     <footer>
         &copy; Workshop Organizers
