--- a/index.html
+++ b/index.html
@@ -121,10 +121,19 @@ for both quantum and classical learning problems. Example topics of interest inc
 
     <p>More to be announced soon.</p>
 
-    <h2>Application and Registration</h2>
+    <h2>Application to attend</h2>
 
-    <p> Workshop talks are by invitation only. Applications for both workshop participation and the school will open in July. Full funding will be available for selected school participants based in Africa.</p>
+    <p> Workshop talks are by invitation only.<p>
 
+    <p><ul>
+        <li>If you would like to primarily attend the workshop, please use <a target="_blank" href="https://forms.gle/y9QDovHyCPxAWC39A">this form</a> to register your interest. </li>
+        <li>If you are currently registered as a student at a South African university, and you would like to attend both the school and workshop, please use <a target="_blank" href="https://forms.gle/YJ4XoNQdKERnwCov9">this form</a> to register your interest. Full financial support (travel and accomodation) will be available for a limited number of selected students.</li>
+        <li>If you are a student who is not at a South African university, and you would like to attend both the school and workshop, please use <a target="_blank" href="https://forms.gle/ymiquMXRtE86bETs9">this form</a> to register your interest.</li>
+ </li></ul></p>
+
+<p>Unfortunately for both the workshop and school, capacity for participation is limited. We will inform all those who have expressed interest of whether they are able to attend by the 30th of August at the latest.</p>
+
+    
     <h2 id="Venue">Venue</h2>
 
     <p>The event will be held at the <a target="_blank" href="https://aims.ac.za">African Institute for Mathematical Sciences (AIMS)</a>, which is located in Muizenberg, Cape Town, steps away from the famous "Surfers Corner" beach. The event will be held from Monday 27th of October 2025, until Thursday 30th of October 2025.</p>
@@ -152,7 +161,7 @@ for both quantum and classical learning problems. Example topics of interest inc
 
     <p> Endorsed by </p>
 
-    <p> <img src="assets/nithecs.jpg" style="width: 40%"><br> </p>
+    <p> <img src="assets/endorsement-banner.png" style="width: 100%"><br> </p>
 
 
 
