final website updates - yeaaaaaah

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ for both quantum and classical learning problems. Example topics of interest inc
         <li> <a target="_blank" href="https://sites.google.com/view/matthiasccaro">Matthias Caro</a> (University of Warwick)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/ulyssechabaud">Ulysse Chabaud</a> (École Normale Supérieure de Paris)</li>
         <li> <a target="_blank" href="https://sitanchen.com">Sitan Chen</a> (Harvard)</li>
+        <li> <a target="_blank" href="https://minadoosti.github.io">Mina Doosti</a> (University of Edinburgh)</li>
         <li> <a target="_blank" href="https://sites.google.com/view/quantumatliacs/">Vedran Dunjko</a> (Leiden University)</li>
         <li> Dar Gilboa (Google)</li>
         <li> Jonas Haferkamp (Saarland University)</li>
@@ -106,13 +107,12 @@ for both quantum and classical learning problems. Example topics of interest inc
         <li> <a target="_blank" href="https://franciscavasconcelos.github.io">Francisca Vasconcelos</a> (UC Berkeley)</li>
         </ul></p>
 
-    <p>More to be announced soon.</p>
-
     <h2 id="SchoolProgram">School Program</h2>
 
     <p>The following lecturers have been confirmed: </p>
 
     <ul>
+        <li> Ryan Sweke (AIMS) - An Introduction to (Quantum) Learning Theory</li>
         <li> <a target="_blank" href="https://antonioannamele.com"> Antonio Anna Mele </a>(FU Berlin) - Haar Integration Tools in Quantum Information</li>
         <li> Lorenzo Leone (FU Berlin) - The Clifford Group and its Applications</li>
         </ul></p>
