added website link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ for both quantum and classical learning problems. Example topics of interest inc
     <p>The following lecturers have been confirmed: </p>
 
     <ul>
-        <li> Ryan Sweke (AIMS) - An Introduction to (Quantum) Learning Theory</li>
+        <li> <a target="_blank" href="https://r-sweke.github.io"> Ryan Sweke </a>(AIMS) - An Introduction to (Quantum) Learning Theory</li>
         <li> <a target="_blank" href="https://antonioannamele.com"> Antonio Anna Mele </a>(FU Berlin) - Haar Integration Tools in Quantum Information</li>
         <li> Lorenzo Leone (FU Berlin) - The Clifford Group and its Applications</li>
         </ul></p>
