added Marcel to organizers

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ for both quantum and classical learning problems. Example topics of interest inc
     Jonathan Conrad (EPFL)<br>
     Jens Eisert (FU Berlin)<br>
     Elies Gil Fuster (FU Berlin)<br>
+    Marcel Hinsche (FU Berlin)<br>
     Sofiene Jerbi (FU Berlin)<br>
     Lorenzo Leone (FU Berlin)<br>
     Antonio Anna Mele (FU Berlin)<br>
